Various small redesigns (#478)
* post links: reverse order of CurrentPage and Highlight

* fix profile PM icon

* navbar improvements

* fit FrontpageSubmissionList design to old page and other tables

* profile: fix rating publicity button

* profile: left-align the previously right tabs on small widths

* overflow scroll frontpage elements only on desktop

* use fw-bold instead of <b></b>

* posts: fix small width horizontal scrolling due to row negative margin

* fix image and video embed widths breaking out of bounds

* whitespace to fix check warnings

--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -1,4 +1,4 @@
-<navbar>
+<navbar class="flex-wrap me-2 me-md-0 fw-bold">
 	<nav-dropdown activate="Home">
 		<a class="dropdown-item" href="/">Home</a>
 		<a class="dropdown-item" href="/WelcomeToTASVideos">Welcome</a>
@@ -8,7 +8,7 @@
 		<a class="nav-link" href="/Movies">Movies</a>
 	</nav-item>
 	<nav-item activate="Game Resources">
-		<a class="nav-link" href="/GameResources">Game Resources</a>
+		<a class="nav-link" href="/GameResources">Game&nbsp;Resources</a>
 	</nav-item>
 	<nav-item activate="ArticleIndex">
 		<a class="nav-link" href="/ArticleIndex">Articles</a>
