add existing rss reeds to head tag

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,10 @@
 	<link rel="stylesheet" href="~/css/diffview.css" />
 	<link href="~/css/prism.css" rel="stylesheet" />
 
+	<link rel="alternate" href="/submissions.rss" type="application/rss+xml" title="TASVideos RSS Submission Feed">
+	<link rel="alternate" href="/publications.rss" type="application/rss+xml" title="TASVideos RSS Publication Feed">
+	<link rel="alternate" href="/wiki.rss" type="application/rss+xml" title="TASVideos Wiki Feed">
+
 	<script src="~/lib/jquery/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 	<script src="~/js/site.js"></script>
