fix title spacing and add proper arrow character

--- a/TASVideos/Pages/Forum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-	ViewData["Title"] = "TASVideos Forums";
+	ViewData["Title"] = "Forum";
 }
 <partial Name="_ForumHeader" />
 <fullrow class="pb-2 pt-2">
