--- a/TASVideos/Pages/Forum/NotFound.cshtml
+++ b/TASVideos/Pages/Forum/NotFound.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
+@{
+	ViewData["Title"] = $"Not Found";
+}
 <partial Name="_ForumHeader" />
-<a asp-page="/Forum">Forum Index</a>
+<h4><a asp-page="Index">Forum Index</a></h4>
 <warning-alert>The topic or post you requested does not exist</warning-alert>
