--- a/TASVideos/Pages/Forum/Topics/Move.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Move.cshtml
@@ -5,8 +5,8 @@
 }
 <partial Name="_ForumHeader" />
 <h4>
-	Moving Topic: 
-	<a asp-page="/Forum/SubForum/Index" asp-route-id="@Model.Topic.ForumId">@Model.Topic.ForumName</a> -> 
+	Moving Topic:
+	<a asp-page="/Forum/SubForum/Index" asp-route-id="@Model.Topic.ForumId">@Model.Topic.ForumName</a> →
 	<a asp-page="Topic" asp-route-id="@Model.Id">@Model.Topic.TopicTitle</a>
 </h4>
 <hr />
