--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -11,7 +11,9 @@
 	}
 }
 @section PageTitle {
-	<h1>@Model.Publication.Title</h1>
+	<div class="container mb-2">
+		<h1>@Model.Publication.Title</h1>
+	</div>
 }
 
 <fullrow class="mt-2">
