--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -94,8 +94,8 @@
 	}
 	else
 	{
-		<div class="container">
-			<h1 class="mb-2 container">@title</h1>
+		<div class="container mb-2">
+			<h1>@title</h1>
 		</div>
 	}
 
