--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -2,14 +2,19 @@
 @using TASVideos.Data.Entity.Forum
 @model IndexModel
 @{
-	ViewData["Title"] = $"TASVideos Forum {Model.Forum.Name}";
+	ViewData["Title"] = $"{Model.Forum.Name} - Subforum";
+}
+@section PageTitle {
+	<div class="container mb-2">
+		<h1>@(Model.Forum.Name)</h1>
+	</div>
 }
 
 <partial Name="_ForumHeader" />
 <a permission="EditForums" asp-page="Edit" asp-route-id="@Model.Forum.Id" class="float-end btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</a>
 <a permission="CreateForumTopics" asp-page="/Forum/Topics/Create" asp-route-forumId="@Model.Forum.Id" class="me-2 float-end btn btn-primary btn-sm"><span class="fa fa-plus"></span> New Topic</a>
 <h4>
-	<a asp-page="/Forum/Index">Forum</a> -> @Model.Forum.Name
+	<a asp-page="/Forum/Index">Forum</a> → @Model.Forum.Name
 </h4>
 <div>
 	<small>@Html.Raw(Model.Forum.Description)</small>
@@ -39,14 +44,14 @@
 				</td>
 				<td>@Math.Max(0, topic.PostCount - 1)</td> @*Imported Submission Topics will have no replies and no original post*@
 				<td> <profile-link username="@topic.CreateUserName"></profile-link></td>
-                <td>
-                    @if (topic.LastPost != null)
-                    {
-                        <timezone-convert asp-for="@topic.LastPostDateTime" /> <br />
+				<td>
+					@if (topic.LastPost != null)
+					{
+						<timezone-convert asp-for="@topic.LastPostDateTime" /> <br />
 						<profile-link username="@topic.LastPostUserName"></profile-link>
-                        <a class="fa fa-arrow-circle-right" href="/Forum/p/@topic.LastPostId#@topic.LastPostId"/>
-                    }
-                    </td>
+						<a class="fa fa-arrow-circle-right" href="/Forum/p/@topic.LastPostId#@topic.LastPostId" />
+					}
+				</td>
 			</tr>
 		}
 	</table>
