--- a/TASVideos/Pages/Forum/Topics/Split.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Split.cshtml
@@ -5,8 +5,8 @@
 }
 <partial Name="_ForumHeader" />
 <h4>
-	Splitting Topic: 
-	<a asp-page="/Forum/SubForum/Index" asp-route-id="@Model.Topic.ForumId">@Model.Topic.ForumName</a> -> 
+	Splitting Topic:
+	<a asp-page="/Forum/SubForum/Index" asp-route-id="@Model.Topic.ForumId">@Model.Topic.ForumName</a> →
 	<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id">@Model.Topic.Title</a>
 </h4>
 <hr />
