--- a/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
@@ -1,9 +1,7 @@
 ﻿@model IForumTopicBreadCrumb
 
-<small class="@(Model.IsLocked ? "alert alert-danger" : "") pt-1 pb-2">
+<h4 class="pt-1 pb-2">
 	<a asp-page="/Forum/Index">Forum</a>
-	->
+	→
 	<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId">@Model.ForumName</a>
-	-> @Html.Raw(Model.Type.ToTitleHtml(Model.Title))
-	<span condition="Model.IsLocked"> (Locked)</span>
-</small>
+</h4>
