--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -40,7 +40,7 @@
 }
 
 @section PageTitle {
-	<div class="container">
+	<div class="container mb-2">
 		<h1>@($"Submission {Model.Submission.Title}")</h1>
 	</div>
 }
