--- a/TASVideos/Pages/Shared/Components/DisplayMiniMovie/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/DisplayMiniMovie/Default.cshtml
@@ -3,16 +3,16 @@
 <div condition="Model != null">
 	<div class="card minimovie">
 		<div class="card-header bg-cardprimary">
-			<h5><span class="float-end badge bg-info text-dark m-1">Featured</span></h5>
-            <h4><pub-link id="Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></pub-link></h4>
+			<h5><span class="float-end badge bg-info text-dark">Featured</span></h5>
+			<h4><pub-link id="Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></pub-link></h4>
 		</div>
 		<div class="card-body bg-cardsecondary">
 			<pub-link id="Model.Id">
-                <div class="float-start pe-3 pb-1" style="max-width: 80%">
-                    <img class="w-100 pixelart-image pb-1" src="~/media/@Model.Screenshot.Path" alt="@Model.Screenshot.Description" />
-                    <br />
+				<div class="float-start pe-3 pb-1" style="max-width: 80%">
+					<img class="w-100 pixelart-image pb-1" src="~/media/@Model.Screenshot.Path" alt="@Model.Screenshot.Description" />
+					<br />
 					<a href="@Model.OnlineWatchingUrl" class="btn btn-primary" target="_blank"><i class="fa fa-external-link"></i> Watch</a>
-                </div>
+				</div>
 			</pub-link>
 			@await Component.RenderWiki(LinkConstants.PublicationWikiPage + Model.Id)
 		</div>
