add SendPrivateUserPermissions to the default user role, actually check it on the create message page

--- a/TASVideos/Pages/Messages/Inbox.cshtml
+++ b/TASVideos/Pages/Messages/Inbox.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="mb-1">
-	<a permissions="new[] { PermissionTo.SendPrivateMessages }" class="float-end btn btn-primary" asp-page="Create">
+	<a permission="SendPrivateMessages" class="float-end btn btn-primary" asp-page="Create">
 		<span class="fa fa-envelope"></span> Create
 	</a>
 	<a class="btn btn-secondary" asp-page="Savebox">
