--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -15,6 +15,9 @@ $light: #f8f9fa;
 $light-rgb: 248,249,250;
 $dark: #212529;
 $dark-rgb: 33, 37, 41;
+$border-light: #ced4da;
+$border-dark: #495057;
+$border-separator-dark: #6c757d;
 $dropdown-text-dark: #dee2e6;
 $dropdown-background-dark: #343a40;
 $banner: #110931;
