--- a/TASVideos/Pages/Users/_UserSearch.cshtml
+++ b/TASVideos/Pages/Users/_UserSearch.cshtml
@@ -1,7 +1,9 @@
-﻿<form asp-page="/Users/Profile" method="GET" class="form-inline" id="search-form">
-	<label class="me-2" for="search-username-box">Search: </label>
-	<input id="search-username-box" name="name" list="search-username-list" required="required" type="search" class="form-control me-2" placeholder="Enter a UserName" autofocus="autofocus" autocomplete="off" spellcheck="false" />
-	<button id="go-button" type="submit" class="btn btn-secondary" disabled="disabled">Go</button>
+﻿<form asp-page="/Users/Profile" method="GET" id="search-form">
+	<div class="input-group">
+		<label class="input-group-text" for="search-username-box">Search: </label>
+		<input id="search-username-box" name="name" list="search-username-list" required="required" type="search" class="form-control" placeholder="Enter a UserName" autofocus="autofocus" autocomplete="off" spellcheck="false" />
+		<button id="go-button" type="submit" class="btn btn-secondary" disabled="disabled">Go</button>
+	</div>
 	<datalist id="search-username-list"></datalist>
 	<script>
 		(function () {
