--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -2,7 +2,7 @@
 @using TASVideos.Pages.Submissions.Models
 @model ViewModel
 @{
-	ViewData["Title"] = $"Submission #{Model.Id}";
+	ViewData["Title"] = $"{Model.Submission.Title} - Submission #{Model.Id}";
 	bool hasEncode = !string.IsNullOrWhiteSpace(Model.Submission.EncodeEmbedLink);
 	bool canEdit = ViewData.UserHas(PermissionTo.EditSubmissions)
 		|| (Model.CanEdit && ViewData.UserHas(PermissionTo.SubmitMovies));
