front page wips module - use link instead of button for consistency (better is to not have crap like this on the front page, one day...)

--- a/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
@@ -19,4 +19,4 @@
 		}
 	</table>
 </div>
-<a class="btn btn-secondary btn-sm" asp-page="/UserFiles/Index">More WIPs</a>
+<a asp-page="/UserFiles/Index">More WIPs...</a>
