--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -24,7 +24,7 @@
 					<a condition="User.IsLoggedIn()"
 					   asp-page="/Messages/Create"
 					   asp-route-defaultToUser="@Model.PosterName"
-					   class="btn btn-secondary btn-sm">
+					   class="btn btn-secondary btn-sm d-none d-md-inline-block">
 						<i class="fa fa-envelope"></i> PM
 					</a>
 					<a asp-page="/Forum/Posts/Create"
@@ -109,7 +109,7 @@
 				<div class="mb-auto">
 					<forum-markup markup=@Model.Text enable-html=@Model.EnableHtml enable-bb-code=@Model.EnableBbCode></forum-markup>
 				</div>
-				<div condition="!string.IsNullOrWhiteSpace(Model.Signature)" class="forum-signature mt-2">
+				<div condition="!string.IsNullOrWhiteSpace(Model.Signature)" class="forum-signature mt-2 d-none d-md-block">
 					<small>
 						<forum-markup markup=@Model.Signature enable-html=false enable-bb-code=true></forum-markup>
 					</small>
