--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -2,7 +2,7 @@
 @using TASVideos.Pages.Submissions.Models
 @model ViewModel
 @{
-	ViewData["Title"] = $"Submission #{Model.Id}";
+	ViewData["Title"] = $"{Model.Submission.Title} - Submission #{Model.Id}";
 	bool hasEncode = !string.IsNullOrWhiteSpace(Model.Submission.EncodeEmbedLink);
 	bool canEdit = ViewData.UserHas(PermissionTo.EditSubmissions)
 		|| (Model.CanEdit && ViewData.UserHas(PermissionTo.SubmitMovies));
@@ -40,7 +40,7 @@
 }
 
 @section PageTitle {
-	<div class="container">
+	<div class="container mb-2">
 		<h1>@($"Submission {Model.Submission.Title}")</h1>
 	</div>
 }
