--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -54,12 +54,14 @@
 			<avatar class="img-fluid" avatar="@Model.PosterAvatar" mood-avatar-base="@Model.PosterMoodUrlBase" mood="@Model.PosterMood" />
 		</div>
 		<div class="col-10 ps-2 pe-0">
-			<h6 class="row">
-				<profile-link username="@Model.PosterName" class="col"></profile-link>
-				<span class="float-end col-auto">
-					<small condition="@(Model.PosterPronouns != PreferredPronounTypes.Unspecified)" class="text-muted">@Html.DisplayFor(m => m.PosterPronouns)</small>
+			<div class="row mb-2">
+				<h6 class="col mb-0">
+					<profile-link username="@Model.PosterName"></profile-link>
+				</h6>
+				<span condition="@(Model.PosterPronouns != PreferredPronounTypes.Unspecified)" class="float-end col-auto">
+					<small class="text-muted">@Html.DisplayFor(m => m.PosterPronouns)</small>
 				</span>
-			</h6>
+			</div>
 			<small>
 				@string.Join(", ", Model.PosterRoles.Select(s => s.Replace(' ', '\u00A0')))
 				<span condition="Model.PosterPlayerPoints >= 5">(@Math.Round(Model.PosterPlayerPoints))</span>
