--- a/TASVideos/Pages/Shared/Components/WikiUsers/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiUsers/Default.cshtml
@@ -4,34 +4,14 @@
 	.OrderByDescending(u => u.PublicationCount)
 	.ThenBy(u => u.SubmissionCount))
 {
-	<div class="user-card">
-		<div class="user-card-header">
+	<div class="card-userinfo">
+		<div class="card-header-userinfo">
 			<profile-link username="@user.UserName"></profile-link>
 		</div>
-		<div class="user-card-body">
+		<div class="card-body-userinfo">
 			Publications: @user.PublicationCount
 			<br />
 			Submissions: @user.SubmissionCount
 		</div>
 	</div>
 }
-
-<style>
-	.user-card {
-		font-size: .75rem;
-		display: inline-block;
-		border: solid 1px;
-		margin: 3px;
-		
-		border-radius: 3px;
-	}
-
-	.user-card-header {
-		background-color: #ccc;
-		padding: 3px;
-	}
-
-	.user-card-body {
-		padding: 3px;
-	}
-</style>
