--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -15,6 +15,10 @@ body {
 	background: var(--tasvideos-bg) linear-gradient(var(--tasvideos-bg-gradient) 0, var(--tasvideos-bg) 250px) repeat-x;
 }
 
+a:visited {
+	color: purple;
+}
+
 .btn-separator::after {
 	content: ' ';
 	display: block;
