--- a/TASVideos/Pages/Shared/Components/Frames/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/Frames/Default.cshtml
@@ -1,6 +1,3 @@
 ﻿@using System.Globalization
 @model FramesModel
-
-<abbr title="@Model.Amount.ToString("N0", CultureInfo.CurrentCulture) Frames @@@Model.Fps FPS">
-	@Model.TimeSpan.ToCondensedString()
-</abbr>
+<abbr title="@Model.Amount.ToString("N0", CultureInfo.CurrentCulture) Frames @@@Model.Fps FPS">@Model.TimeSpan.ToCondensedString()</abbr>
