--- a/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IList<GameNameModel>
-
 @if (Model.Any(g => g.IsSystem))
 {
 	<span>@Model.First().System</span>
@@ -7,7 +6,5 @@
 else
 {
 	for (int i = 0; i < Model.Count; i++)
-	{
-		<game-link id="Model[i].GameId">@Model[i].DisplayName</game-link><span condition="i < Model.Count - 1">, </span>
-	}
+	{<game-link id="Model[i].GameId">@Model[i].DisplayName</game-link><span condition="i < Model.Count - 1">, </span>}
 }
