--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -1,4 +1,4 @@
-/// <reference path="colors.scss" />
+﻿/// <reference path="colors.scss" />
 /// <reference path="variables.scss" />
 
 :root {
@@ -57,10 +57,10 @@ h4 {
 
 	&, &:focus {
 		color: var(--bs-dark);
-		background-color: var(--bs-light);
+		background-color: var(--bs-white);
 	}
 
-	:disabled, [read-only] {
+	&:disabled, &[readonly] {
 		background-color: var(--bs-light);
 	}
 }
