--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -57,10 +57,10 @@ h4 {
 
 	&, &:focus {
 		color: var(--bs-dark);
-		background-color: var(--bs-light);
+		background-color: var(--bs-white);
 	}
 
-	:disabled, [read-only] {
+	&:disabled, &[readonly] {
 		background-color: var(--bs-light);
 	}
 }
@@ -136,4 +136,14 @@ h4 {
 
 .modal-footer {
 	border-top-color: var(--border-separator-color);
+}
+
+.nav-tabs {
+	border-color: var(--bs-light);
+
+	.nav-item.show .nav-link, .nav-link.active {
+		color: color: var(--bs-dark);
+		background-color: var(--bs-white);
+		border-color: var(--bs-light) var(--bs-light) var(--bs-white);
+	}
 }
