Activity/Publishing - link to users profile.  Rough in judge and publisher stats on profile (just counts for now), link back to activity page, fixes #521

--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -2,7 +2,7 @@
 @{ ViewData["Title"] = $"Publisher Activity for {Model.UserName}"; }
 @model PublishersModel
 
-<p>Movies published by @Model.UserName</p>
+<p>Movies published by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
 @foreach (var pub in Model.Publications.OrderBy(p => p.Id))
 {
