Judging activity - sort by status, then by recency.  Publishing activity - sort by recency

--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -4,7 +4,7 @@
 
 <p>Movies published by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
-@foreach (var pub in Model.Publications.OrderBy(p => p.Id))
+@foreach (var pub in Model.Publications.OrderByDescending(p => p.Id))
 {
 	<pub-link id="pub.Id">@pub.Title</pub-link><br />
 }
