--- a/TASVideos/Pages/Activity/Judges.cshtml
+++ b/TASVideos/Pages/Activity/Judges.cshtml
@@ -25,7 +25,7 @@ Cancelled: @cancelledTotal (@cancelledTotal.ToPercent(total)%)
 			<th>Submission</th>
 			<th>Decision</th>
 		</tr>
-		@foreach (var sub in Model.Submissions.OrderBy(s => s.Id))
+		@foreach (var sub in Model.Submissions.OrderBy(s => s.Status).ThenByDescending(s => s.Id))
 		{
 			<tr>
 				<td>
