sort out extension methods for generating the current url as a return url, vs getting a passed in return url, fixes #518

--- a/TASVideos/Pages/Account/Login.cshtml
+++ b/TASVideos/Pages/Account/Login.cshtml
@@ -37,7 +37,7 @@
 			</form-group>
 			<form-group>
 				<p><a asp-page="ForgotPassword">Forgot your password?</a></p>
-				<p><a asp-page="Register" asp-route-returnurl="@HttpContext.ReturnUrl()">Register as a new user?</a></p>
+				<p><a asp-page="Register" asp-route-returnurl="@HttpContext.CurrentPathToReturnUrl()">Register as a new user?</a></p>
 			</form-group>
 		</form>
 	</section>
