--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -42,7 +42,7 @@
 				<a class="nav-link" asp-page="/Account/Register">Register</a>
 			</nav-item>
 			<nav-item activate="Login">
-				<a class="nav-link text-nowrap" asp-page="/Account/Login" asp-route-returnUrl="@Context.ReturnUrl()"><i class="fa fa-sign-in"></i> Log in</a>
+				<a class="nav-link text-nowrap" asp-page="/Account/Login" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()"><i class="fa fa-sign-in"></i> Log in</a>
 			</nav-item>
 			<nav-item activate="Search">
 				<a class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
