--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -111,7 +111,7 @@
 					<span permission="RateMovies">
 						<a asp-page="/Publications/Rate"
 						   asp-route-id="@Model.Id"
-						   asp-route-returnUrl="@Context.ReturnUrl()">
+						   asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
 							Rating
 						</a>: &nbsp;
 					</span>
