--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -22,11 +22,11 @@
 		<h4>
 			#@Model.Id - @Model.Title
 			<span condition="canEdit" class="float-end">
-				<a asp-page="/UserFiles/Edit" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.ReturnUrl()" class="btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</a>
+				<a asp-page="/UserFiles/Edit" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()" class="btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</a>
 				<delete-button
 					class="btn-sm",
 					warning-message="Are you sure you want to delete this file?"
-					asp-href="/UserFiles?handler=Delete&fileId=@Model.Id&returnUrl=@Context.ReturnUrl()"
+					asp-href="/UserFiles?handler=Delete&fileId=@Model.Id&returnUrl=@Context.CurrentPathToReturnUrl()"
 				>
 					<i class="fa fa-remove"></i>
 				</delete-button>
@@ -89,7 +89,7 @@
 					<wiki-markup markup="@comment.Text" id="view-comment-@comment.Id"></wiki-markup>
 					<div condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
 						<div class="d-none" id="edit-comment-@comment.Id">
-							<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.ReturnUrl()">
+							<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
 								<input type="hidden" name="commentId" value="@comment.Id" />
 								<textarea name="comment" class="form-control">@comment.Text</textarea>
 								<button type="submit" class="btn btn-primary btn-sm mt-1"><i class="fa fa-save"></i> Save</button>
@@ -99,7 +99,7 @@
 						<button type="button" class="btn btn-primary btn-sm mb-2" onclick="this.classList.add('d-none'); document.getElementById('edit-comment-@comment.Id').classList.remove('d-none'); document.getElementById('view-comment-@comment.Id').classList.add('d-none');"><i class="fa fa-pencil"></i> Edit</button>
 						<delete-button
 							class="btn-sm mb-2"
-							asp-href="/UserFiles/Index?handler=DeleteComment&commentId=@comment.Id&returnUrl=@Context.ReturnUrl()"
+							asp-href="/UserFiles/Index?handler=DeleteComment&commentId=@comment.Id&returnUrl=@Context.CurrentPathToReturnUrl()"
 							warning-message="Are you sure you want to delete this comment?"
 							condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
 							<i class="fa fa-remove"></i>
@@ -111,7 +111,7 @@
 		}
 		
 		<div permission="CreateForumPosts">
-			<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="Comment" asp-route-returnUrl="@Context.ReturnUrl()">
+			<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="Comment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
 				<input type="hidden" name="fileId" value="@Model.Id "/>
 				<label class="form-control-label">Comment:</label>
 				<textarea class="form-control" name="comment"></textarea>
