profile - add Id to private user data (maybe this could be non-private, just being paranoid)

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -50,6 +50,9 @@
 					<label>@Model.TimeZone</label>
 					<br />
 					<div class="alert alert-info" permission="ViewPrivateUserData">
+						<label asp-for="Id"></label>
+						<label>@Model.Id</label>
+						<br />
 						<label asp-for="Email"></label>
 						<label>@Model.Email</label>
 						<br />
