a few misc cleanups

--- a/TASVideos/Pages/Flags/Create.cshtml
+++ b/TASVideos/Pages/Flags/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CreateModel
 @{
-	ViewData["Title"] = $"Creating a new Flag";
+	ViewData["Title"] = "Creating a new Flag";
 }
 
 <form method="post">
