--- a/TASVideos/Pages/Forum/NotFound.cshtml
+++ b/TASVideos/Pages/Forum/NotFound.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @{
-	ViewData["Title"] = $"Not Found";
+	ViewData["Title"] = "Not Found";
 }
 <partial Name="_ForumHeader" />
 <h4><a asp-page="Index">Forum Index</a></h4>
