--- a/TASVideos/Pages/Tags/Create.cshtml
+++ b/TASVideos/Pages/Tags/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CreateModel
 @{
-	ViewData["Title"] = $"Creating a new Tag";
+	ViewData["Title"] = "Creating a new Tag";
 }
 
 <form method="post">
