--- a/TASVideos/Pages/Tiers/Create.cshtml
+++ b/TASVideos/Pages/Tiers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CreateModel
 @{
-	ViewData["Title"] = $"Creating a new Tier";
+	ViewData["Title"] = "Creating a new Tier";
 }
 
 <form method="POST">
