fix crash on movie module when tier icon path is null

--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -2,7 +2,7 @@
 @{
 	var tierIconPath2x = "";
 	var tierIconPath4x = "";
-	if (string.IsNullOrWhiteSpace(Model.TierIconPath))
+	if (!string.IsNullOrWhiteSpace(Model.TierIconPath))
 	{
 		tierIconPath2x = $"{Model.TierIconPath.Split('.')[0]}-2x.png";
 		tierIconPath4x = $"{Model.TierIconPath.Split('.')[0]}-4x.png";
